--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Formulário</title>
   </head>
   <body>
-    <div class="container">
+   <div class="container">
       <div class="header">
         <h2>Criar Uma Conta</h2>
       </div>
@@ -22,11 +22,7 @@
       <form id="form" class="form">
         <div class="form-control">
           <label for="username">Nome de usuário</label>
-          <input
-            type="text"
-            id="username"
-            placeholder="Digite seu nome de usuário..."
-          />
+          <input type="text" id="username" placeholder="Digite seu nome de usuário..." />
           <i class="fas fa-exclamation-circle"></i>
           <i class="fas fa-check-circle"></i>
           <small>Mensagem de erro</small>
@@ -41,12 +37,36 @@
         </div>
 
         <div class="form-control">
+          <label for="tipoPessoa">Tipo de Pessoa</label>
+          <select id="tipoPessoa">
+            <option value="">Selecione</option>
+            <option value="pf">Pessoa Física</option>
+            <option value="pj">Pessoa Jurídica</option>
+          </select>
+          <i class="fas fa-exclamation-circle"></i>
+          <i class="fas fa-check-circle"></i>
+          <small>Mensagem de erro</small>
+        </div>
+
+        <div id="campoCpf" class="form-control campo">
+          <label for="cpf">CPF</label>
+          <input type="text" id="cpf" placeholder="Digite o CPF" />
+          <i class="fas fa-exclamation-circle"></i>
+          <i class="fas fa-check-circle"></i>
+          <small>Mensagem de erro</small>
+        </div>
+
+        <div id="campoCnpj" class="form-control campo">
+          <label for="cnpj">CNPJ</label>
+          <input type="text" id="cnpj" placeholder="Digite o CNPJ" />
+          <i class="fas fa-exclamation-circle"></i>
+          <i class="fas fa-check-circle"></i>
+          <small>Mensagem de erro</small>
+        </div>
+
+        <div class="form-control">
           <label for="password">Senha</label>
-          <input
-            type="password"
-            id="password"
-            placeholder="Digite sua senha..."
-          />
+          <input type="password" id="password" placeholder="Digite sua senha..." />
           <i class="fas fa-exclamation-circle"></i>
           <i class="fas fa-check-circle"></i>
           <small>Mensagem de erro</small>
@@ -54,11 +74,7 @@
 
         <div class="form-control">
           <label for="password-confirmation">Confirmação de senha</label>
-          <input
-            type="password"
-            id="password-confirmation"
-            placeholder="Digite sua senha novamente..."
-          />
+          <input type="password" id="password-confirmation" placeholder="Digite sua senha novamente..." />
           <i class="fas fa-exclamation-circle"></i>
           <i class="fas fa-check-circle"></i>
           <small>Mensagem de erro</small>
@@ -67,6 +83,7 @@
         <button type="submit">Enviar</button>
       </form>
     </div>
+
 
     <script
       src="https://kit.fontawesome.com/f9e19193d6.js"
