--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
   </div>
 
   <script src="https://kit.fontawesome.com/f9e19193d6.js" crossorigin="anonymous"></script>
-  <script src="./script.js"></script>
+  <script src="./scripts.js"></script>
 </body>
 </html>
